--- a/osa-0/0.4.md
+++ b/osa-0/0.4.md
@@ -5,7 +5,7 @@ sequenceDiagram
 
     browser->>server:POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate server
-    Note right of server: POST pyyntö käsitellään Javascriptissä.
+    Note right of server: POST pyyntö käsitellään Javascriptissä
     server-->>browser:Redirect
     deactivate server
     Note left of browser: Automaattinen uusi GET-pyyntö
