--- a/osa-0/0.6.md
+++ b/osa-0/0.6.md
@@ -5,6 +5,7 @@ sequenceDiagram
 
     browser->>server:POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa;
     activate server
-    server-->>browser:{"message":"note created"}
+    server-->>browser:{message: "note created"}
     deactivate server
+    Note left of browser: Selaimen näkymä päivittyy automaattisesti
 ```
