--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -5,10 +5,10 @@ sequenceDiagram
 
     browser->>server:POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate server
-    Note right of server: POST pyyntö käsitellään Javascriptissä
+    Note right of server: POST pyyntö käsitellään Javascriptissä.
     server-->>browser:Redirect
     deactivate server
-    Note left of browser: Automaattinen uusi GET-pyyntö
+    Note left of browser: Automaattinen uusi GET-pyyntö.
 
     browser->>server:GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
@@ -24,7 +24,7 @@ sequenceDiagram
     activate server
     server-->>browser:JavaScript
     deactivate server
-    Note left of browser: Javascript koodi ohjaa GET pyyntöön
+    Note left of browser: Javascript koodi ohjaa GET pyyntöön.
 
     browser->>server:https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
