--- a/part0/0.5.md
+++ b/part0/0.5.md
@@ -17,7 +17,7 @@ sequenceDiagram
     activate server
     server-->>browser:JavaScript
     deactivate server
-    Note left of browser: JavaScript ohjaa uuden GET pyynnön
+    Note left of browser: JavaScript ohjaa uuden GET pyynnön.
 
     browser->>server:GET https://studies.cs.helsinki.fi/exampleapp/data.json;
     activate server
