--- a/part0/0.6.md
+++ b/part0/0.6.md
@@ -7,5 +7,5 @@ sequenceDiagram
     activate server
     server-->>browser:{message: "note created"}
     deactivate server
-    Note left of browser: Selaimen näkymä päivittyy automaattisesti
+    Note left of browser: Selaimen näkymä päivittyy automaattisesti.
 ```
